# pykoplenti

./: .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
doc/: command_line.md  developer.md  process_data.md  virtual_process_data.md
examples/: read_process_data.py  read_virtual_process_data.py
kostal/plenticore/: __init__.py  cli.py
pykoplenti/: __init__.py  api.py  cli.py  extended.py  model.py
tests/: conftest.py  test_cli.py  test_extendedapiclient.py  test_pykoplenti.py  test_smoketest.py
tests/extended/: test_extendedapiclient.py
