[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.black]
target-version = ["py37", "py38"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = [
    "kostal",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true