[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = [
    "kostal",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true

[tool.ruff]
line-length = 88