[metadata]
name = kostal-plenticore
version = 0.1.1
description = Kostal Plenticore REST-API client

[options]
packages =
    kostal
    kostal.plenticore
install_requires =
    aiohttp >= 3.6
    pycryptodome >= 3.9
    prompt_toolkit >= 3.0
    click >= 7.1

[options.entry_points]
console_scripts =
    plenticore = kostal.plenticore.cli:cli