[metadata]
name = pykoplenti
version = 1.1.0
description = Python REST-Client for Kostal Plenticore Solar Inverters
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rest kostal plenticore solar
author = @stegm
url = https://github.com/stegm/pyclient_koplenti
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries

[options]
packages =
    pykoplenti
install_requires =
    aiohttp >= 3.6
    pycryptodome >= 3.9

[options.extras_require]
CLI =
    prompt_toolkit >= 3.0
    click >= 7.1

[options.entry_points]
console_scripts =
    pykoplenti = pykoplenti.cli:cli [CLI]