[metadata]
name = pykoplenti
version = 1.3.0
description = Python REST-Client for Kostal Plenticore Solar Inverters
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rest kostal plenticore solar
author = @stegm
url = https://github.com/stegm/pyclient_koplenti
project_urls =
    repository = https://github.com/stegm/pyclient_koplenti
    changelog = https://github.com/stegm/pykoplenti/blob/master/CHANGELOG.md
    issues = https://github.com/stegm/pykoplenti/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries

[options]
packages = pykoplenti
install_requires =
    aiohttp ~= 3.8
    pycryptodome ~= 3.19
    pydantic >= 1.10

[options.package_data]
pykoplenti = py.typed

[options.extras_require]
CLI =
    prompt_toolkit >= 3.0
    click >= 8.0

[options.entry_points]
console_scripts =
    pykoplenti = pykoplenti.cli:cli [CLI]
